Complete adding and removing favorites

--- a/Views/AllTopics.cshtml
+++ b/Views/AllTopics.cshtml
@@ -10,6 +10,9 @@
     <script src="~/js/General.js"></script>
     <script src="~/js/handlers/DefaultEventsForButtons.js"></script>
     <script src="~/js/handlers/AuthUser.js"></script>
+    <script src="~/js/handlers/SettingFavoriteBlock.js"></script>
+    <script src="~/js/handlers/EditingFavorites.js"></script>
+    <script src="~/js/handlers/RemoveFromFavorite.js"></script>
     <script src="~/js/handlers/LoadTopics.js"></script>
     <script src="~/js/handlers/CreateDiscussion.js"></script>
     <script src="~/js/handlers/LoadAllDiscussions.js"></script>
@@ -47,9 +50,9 @@
             <div id="discussing-block" class="d-flex flex-column content-block">
                 <div id="header-of-discussions" class="d-flex justify-content-between">
                     <h3>Обсуждения:</h3>
-                    <div id="disc-buttons" class="d-flex justify-content-between flex-wrap">
-                        <button id="btn-create-disc" type="button" class="btn btn-dark">Cоздать обсуждение</button>
-                        <select class="shadow-none form-select" id="selectSort" aria-label="SortingDisc">
+                    <div id="discussion-buttons" class="d-flex justify-content-between flex-wrap">
+                        <button id="btn-create-discussion" type="button" class="btn btn-dark">Cоздать обсуждение</button>
+                        <select class="shadow-none form-select" id="selectSort" aria-label="SortingDiscussion">
                             <option value="1">Новые</option>
                             <option value="2">Старые</option>
                             <option value="3">Max сообщений</option>
@@ -58,7 +61,7 @@
                     </div>
                 </div>
                 <div class="table-responsive">
-                    <table id="table-disc" class="table">
+                    <table id="table-discussion" class="table">
                         <thead>
                         <tr class="d-flex">
                             <th class="col-1">№</th>
