--- a/Views/Index.cshtml
+++ b/Views/Index.cshtml
@@ -10,6 +10,9 @@
     <script src="~/js/General.js"></script>
     <script src="~/js/handlers/DefaultEventsForButtons.js"></script>
     <script src="~/js/handlers/AuthUser.js"></script>
+    <script src="~/js/handlers/SettingFavoriteBlock.js"></script>
+    <script src="~/js/handlers/EditingFavorites.js"></script>
+    <script src="~/js/handlers/RemoveFromFavorite.js"></script>
     <script src="~/js/orderOfHandlers/ForIndex.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 </head>
