--- a/wwwroot/css/discussion.css
+++ b/wwwroot/css/discussion.css
@@ -28,8 +28,8 @@
     background-color: #222121;
     padding: 20px;
     display: grid;
-    grid-template-rows: repeat(auto-fit, min-content);
-    grid-row-gap: 20px;
+    grid-template-rows: repeat(auto-fill, minmax(min-content, 150px));
+    grid-row-gap: 30px;
     margin-inline: 10px;
 }
 
