--- a/Views/Login.cshtml
+++ b/Views/Login.cshtml
@@ -38,12 +38,12 @@
     <form id="login-block" class="d-flex content-block flex-column justify-content-between">
         <div id="box-login" class="d-flex flex-column">
             <div class="d-flex form-login flex-column">
-                <label for="floatingLogin">Введите ваш логин:</label>
-                <input type="text" class="form-control" id="floatingLogin" placeholder="Введите логин">
+                <label for="login">Введите ваш логин:</label>
+                <input type="text" class="form-control" id="login" placeholder="Введите логин">
             </div>
             <div class="d-flex form-passwd flex-column">
-                <label for="floatingPassword">Введите ваш пароль:</label>
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Введите пароль">
+                <label for="password">Введите ваш пароль:</label>
+                <input type="password" class="form-control" id="password" placeholder="Введите пароль">
                 <a href="/recover_password" class="forget-passwd align-self-end">Забыли пароль?</a>
             </div>
         </div>
