--- a/Views/Registration.cshtml
+++ b/Views/Registration.cshtml
@@ -38,16 +38,16 @@
     <form id="registration-block" class="d-flex flex-column content-block justify-content-between">
         <div id="box-registration" class="d-flex flex-column">
             <div class="d-flex form-login flex-column">
-                <label for="floatingLogin">Введите ваш логин:</label>
-                <input type="text" class="form-control" id="floatingLogin" placeholder="Введите логин">
+                <label for="login">Введите ваш логин:</label>
+                <input type="text" class="form-control" id="login" placeholder="Введите логин">
             </div>
             <div class="d-flex form-passwd flex-column">
-                <label for="floatingPassword">Введите ваш пароль:</label>
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Введите пароль">
+                <label for="password">Введите ваш пароль:</label>
+                <input type="password" class="form-control" id="password" placeholder="Введите пароль">
             </div>
             <div class="d-flex form-passwd flex-column">
-                <label for="floatingConfirmPassword">Подтвердите ваш пароль:</label>
-                <input type="password" class="form-control" id="floatingConfirmPassword" placeholder="Подтвердите пароль">
+                <label for="confirmPassword">Подтвердите ваш пароль:</label>
+                <input type="password" class="form-control" id="confirmPassword" placeholder="Подтвердите пароль">
             </div>
         </div>
         <button type="submit" class="btn btn-dark btn-register">Зарегистрироваться</button>
