--- a/wwwroot/css/login.css
+++ b/wwwroot/css/login.css
@@ -17,7 +17,7 @@
     margin-bottom: 30px;
 }
 
-label[for^=floating] {
+#box-login > div > label {
     font-size: 1rem;
     margin-bottom: 10px;
 }
