--- a/Views/Topic.cshtml
+++ b/Views/Topic.cshtml
@@ -16,6 +16,7 @@
     <script src="~/js/handlers/RemoveFromFavorite.js"></script>
     <script src="~/js/handlers/AddTopicToFavorites.js"></script>
     <script src="~/js/handlers/LoadCurrentTopic.js"></script>
+    <script src="~/js/handlers/EditTopic.js"></script>
     <script src="~/js/handlers/CreateDiscussion.js"></script>
     <script src="~/js/handlers/LoadDiscussionsForCurrentTopic.js"></script>
     <script src="~/js/orderOfHandlers/ForTopic.js"></script>
@@ -49,8 +50,8 @@
         <div id="main-block">
             <div id="topics-block" class="content-block">
                 <div id="header-of-topic" class="d-flex justify-content-between">
-                    <h3 id="name-of-topic"></h3><hr>
-                </div>
+                    <h3 id="name-of-topic"></h3>
+                </div><hr>
                 <p id="topic-description"></p>
             </div>
             <div id="discussing-block" class="d-flex flex-column content-block">
