--- a/wwwroot/css/topics.css
+++ b/wwwroot/css/topics.css
@@ -26,15 +26,16 @@
     display: grid;
     grid-template-rows: repeat(auto-fill, minmax(50px, auto));
     grid-template-columns: repeat(auto-fill, minmax(150px, auto));
-    grid-gap: 5px;
-    vertical-align: center;
+    grid-gap: 15px;
     text-align: center;
+    max-height: 300px;
+    overflow-y: auto;
 }
 
 .link-on-topics {
-    margin-right: 15px;
-    margin-bottom: 10px;
     font-size: 0.9rem;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
 }
 
 #discussing-block {
@@ -107,10 +108,34 @@ ul.dropdown-menu > li > a {
     background-color: #323030;
 }
 
-.name-of-new-discussion, .select-topic-for-new-discussion {
+.name-of-new-topic,
+.description-for-new-topic {
     margin-bottom: 30px;
 }
 
-.name-of-new-discussion > label, .select-topic-for-new-discussion > label {
+.name-of-new-topic > label,
+.description-for-new-topic > label {
+    margin-bottom: 10px;
+}
+
+.edit-topic-name,
+.edit-description-for-topic {
+    margin-bottom: 30px;
+}
+
+.edit-topic-name > label,
+.edit-description-for-topic > label {
+    margin-bottom: 10px;
+}
+
+.name-of-new-discussion, 
+.description-of-new-discussion,
+.select-topic-for-new-discussion {
+    margin-bottom: 30px;
+}
+
+.name-of-new-discussion > label,
+.description-of-new-discussion > label,
+.select-topic-for-new-discussion > label {
     margin-bottom: 10px;
 }
