Project is ready to get mark

--- a/Views/Discussion.cshtml
+++ b/Views/Discussion.cshtml
@@ -18,8 +18,10 @@
     <script src="~/js/handlers/AddDiscussionToFavorites.js"></script>
     <script src="~/js/handlers/LoadDataForDiscussion.js"></script>
     <script src="~/js/handlers/AddMessage.js"></script>
+    <script src="~/js/handlers/EditMessages.js"></script>
     <script src="~/js/orderOfHandlers/ForDiscussion.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 </head>
 <body class="background text-font">
 <header class="d-flex flex-wrap justify-content-between">
@@ -54,7 +56,7 @@
             <div id="disc-content"></div>
             <form id="send-message" class="send-buttons d-flex justify-content-around">
                     <textarea id="messageContent" class="form-control" aria-label="message"></textarea>
-                    <button type="submit" class="btn btn-dark">
+                    <button type="submit" id="btn-send" class="btn btn-dark">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-send" viewBox="0 0 16 16">
                             <path d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z"/>
                         </svg>
