--- a/Views/RecoverPassword.cshtml
+++ b/Views/RecoverPassword.cshtml
@@ -9,6 +9,7 @@
     <link href="~/css/recover_password.css" rel="stylesheet">
     <script src="~/js/General.js"></script>
     <script src="~/js/handlers/DefaultEventsForButtons.js"></script>
+    <script src="~/js/handlers/RecoverPassword.js"></script>
     <script src="~/js/orderOfHandlers/ForRecoverPassword.js"></script>
 </head>
 <body class="background text-font">
@@ -38,10 +39,10 @@
     </div>
     <form id="login-block" class="d-flex content-block flex-column justify-content-between">
         <div class="d-flex flex-column form-login">
-            <label for="floatingLogin">Введите ваш логин:</label>
-            <input type="text" class="form-control" id="floatingLogin" placeholder="Введите логин">
+            <label for="login">Введите ваш логин:</label>
+            <input type="text" class="form-control" id="login" placeholder="Введите логин">
         </div>
-        <button type="button" class="btn btn-dark btn-send">Отправить</button>
+        <button type="submit" class="btn btn-dark btn-send">Отправить</button>
     </form>
 </main>
 <footer class="d-flex justify-content-around align-items-center">
