--- a/Views/ChangePassword.cshtml
+++ b/Views/ChangePassword.cshtml
@@ -9,6 +9,7 @@
     <link href="~/css/change_password.css" rel="stylesheet">
     <script src="~/js/General.js"></script>
     <script src="~/js/handlers/DefaultEventsForButtons.js"></script>
+    <script src="~/js/handlers/ChangePassword.js"></script>
     <script src="~/js/orderOfHandlers/ForChangePassword.js"></script>
 </head>
 <body class="background text-font">
@@ -38,14 +39,14 @@
     </div>
     <form id="changes-block" class="d-flex flex-column content-block justify-content-between">
         <div class="d-flex form-passwd flex-column">
-            <label for="floatingPassword">Введите новый пароль:</label>
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Введите пароль">
+            <label for="password">Введите новый пароль:</label>
+            <input type="password" class="form-control" id="password" placeholder="Введите пароль">
         </div>
         <div class="d-flex form-passwd flex-column">
-            <label for="floatingConfirmPassword">Подтвердите новый пароль:</label>
-            <input type="password" class="form-control" id="floatingConfirmPassword" placeholder="Подтвердите пароль">
+            <label for="confirmPassword">Подтвердите новый пароль:</label>
+            <input type="password" class="form-control" id="confirmPassword" placeholder="Подтвердите пароль">
         </div>
-        <button type="button" class="btn btn-dark align-self-end">Сохранить изменения</button>
+        <button type="submit" class="btn btn-dark align-self-end">Сохранить изменения</button>
     </form>
 </main>
 <footer class="d-flex justify-content-around align-items-center">
